refactoring dos prompts
