# public/swagger.json
@@ -25,32 +25,6 @@
     }
   },
   "paths": {
-    "/api/batch/{name}/html": {
-      "get": {
-        "description": "Obtem um relatório em HTML para um lote de processos",
-        "tags": [
-          "batch"
-        ],
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "name",
-            "required": true,
-            "description": "Nome do lote"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Relatório em HTML"
-          }
-        }
-      }
-    },
     "/api/batch/{name}/{number}": {
       "post": {
         "description": "Seleciona a combinação de peças e produtos para um processo e gera os resumos e o conteúdo de cada produto",
@@ -85,6 +59,32 @@
         "responses": {
           "200": {
             "description": "OK, processo analisado e resultado armazenado no banco de dados"
+          }
+        }
+      }
+    },
+    "/api/batch/{name}/html": {
+      "get": {
+        "description": "Obtem um relatório em HTML para um lote de processos",
+        "tags": [
+          "batch"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "name",
+            "required": true,
+            "description": "Nome do lote"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Relatório em HTML"
           }
         }
       }
